--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
+aiohttp==3.9.3
 beautifulsoup4==4.12.3
-requests==2.31.0
-pandas==2.2.0
+asyncio==3.4.3
+aiofiles==23.2.1
 python-dateutil==2.8.2
 urllib3==2.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 idna==3.6
-numpy==1.26.4
-pytz==2024.1
-six==1.16.0
-tzdata==2024.1
+typing-extensions==4.9.0
